# tortoize

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  changelog  clean_install.sh  package.json  pyproject.toml  tortoized.service.in  webpack.config.js  zscores_proteins.txt
.github/workflows/: cmake-multi-platform.yml
cmake/: FindOrFetch.cmake
src/: python-bindings.cpp  revision.hpp  tortoize-main.cpp  tortoize-server-main.cpp  tortoize.cpp  tortoize.hpp
src/cpp/: revision.hpp  tortoize.cpp
src/py_tortoize/: python-bindings.cpp  scan_and_collect_results.py
test/: CMakeLists.txt  test_python_api.py  tortoize-unit-test.cpp
